# anon-messages-tg-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 94fad07870a6_user_table_init.py
cmd/bot/: main.py
src/core/: db.py  exceptions.py  logger.py  settings.py  text.py
src/filters/: __init__.py  check_telegram_id.py
src/keyboards/: callback_data.py  inline.py
src/language/: translator.py
src/language/locales/: en.ftl  ru.ftl
src/middlewares/: __init__.py  context.py  logging.py  translator.py  user_registration.py
src/models/: base.py  user.py
src/repo/: __init__.py  unitofwork.py  user_repo.py
src/routers/: __init__.py  any_message.py  errors.py
src/routers/users/: __init__.py  about_bot.py  cancel_action.py  cmd_start.py  profile.py  start_dialog.py
src/services/: __init__.py  service.py  service_container.py  user_service.py
src/utils/: commands.py  payload.py  states.py
